--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,2 +1,23 @@
+// Reset styles
 @use '_reset';
 
+// Fonts
+@font-face {
+  font-family: 'Inter';
+  src: url('../../fonts/Inter-Regular.woff2') format('woff2'),
+       url('../../fonts/Inter-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../../fonts/Inter-SemiBold.woff2') format('woff2'),
+       url('../../fonts/Inter-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+body {
+	font-family: 'Inter', sans-serif;
+}
