--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -18,6 +18,7 @@
   font-style: normal;
 }
 
+//styles
 .body {
 	font-family: 'Inter', sans-serif;
 	display: flex;
@@ -57,15 +58,6 @@
 			.form {
 				display: flex;
 				gap: 20px;
-				
-				.form__input {
-					// font-family: 'Inter', sans-serif;
-
-				}
-
-				/* .form__button {
-					text-transform: uppercase;
-				} */
 			}
 		}
 
@@ -73,18 +65,41 @@
 			display: flex;
 			justify-content: center;
 			gap: 20px;
+			
+			.contact-list {
+				width: 300px;
+			}
+
+			.contact {
+					background-color: rgba(197, 190, 228, 0.658);
+					padding: 5px 10px;
+					display: flex;
+					align-items: center;
+					border-bottom: 1px solid rgb(157, 113, 182);
+					font-size: 16px;
+
+					.contact__card-info {
+						flex: 1 1 auto;
+					}
+
+					.contact__button {
+						all: unset;
+						cursor: pointer;
+					}
+				}
 
 			.contact-list__item {
 				font-size: 22px;
 				font-weight: 600;
 				line-height: 204.54%;
 				text-transform: uppercase;
-				width: 250px;
-				height: 45px;
+				min-height: auto;
 				background-color: rgb(197, 233, 196);
 				border-top: 1px solid rgb(71, 150, 69);
 				border-bottom: 1px solid rgb(71, 150, 69);
-				padding: 0px 0px 0px 15px;
+				padding: 0px 35px 0px 15px;
+				display: flex;
+				justify-content: space-between;
 			}
 		}
 	}
