--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -68,9 +68,8 @@
 			
 			.contact-list {
 				width: 300px;
-			}
 
-			.contact {
+				.contact {
 					background-color: rgba(197, 190, 228, 0.658);
 					padding: 5px 10px;
 					display: flex;
@@ -87,6 +86,7 @@
 						cursor: pointer;
 					}
 				}
+			}
 
 			.contact-list__item {
 				font-size: 22px;
@@ -100,6 +100,18 @@
 				padding: 0px 35px 0px 15px;
 				display: flex;
 				justify-content: space-between;
+
+				.contact-list__counter {
+					display: none;
+				}
+			}
+
+			.contact-list__item_active {
+				background-color: rgb(136, 209, 135);
+
+				.contact-list__counter {
+					display: block;
+				}
 			}
 		}
 	}
