--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -77,7 +77,7 @@
 					border-bottom: 1px solid rgb(157, 113, 182);
 					font-size: 16px;
 
-					.contact__card-info {
+					.contact__info {
 						flex: 1 1 auto;
 					}
 
