--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -53,11 +53,47 @@
 			display: flex;
 			justify-content: center;
 			gap: 20px;
-			margin: 0px 0px 40px 0px;
+			margin: 0px 0px 50px 0px;
+			position: relative;
 
 			.form {
 				display: flex;
 				gap: 20px;
+			}
+		}
+		.error {
+			position: absolute;
+			top: 34px;
+			background-color: rgba(253, 119, 153, 0.541);
+			border: 2px solid rgb(219, 23, 72);
+			border-radius: 5px;
+			height: 25px;
+			padding: 0px 15px;
+			display: flex;
+			align-items: center;
+			visibility: hidden;
+		}
+
+		.errorVisible {
+	visibility: visible;
+	animation: fadeIn 5s;
+		}
+
+		@keyframes fadeIn {
+			0% {
+				opacity: 0;
+			}
+
+			10% {
+				opacity: 1;
+			}
+
+			90% {
+				opacity: 1;
+			}
+
+			100% {
+				opacity: 0;
 			}
 		}
 
@@ -100,6 +136,7 @@
 				padding: 0px 35px 0px 15px;
 				display: flex;
 				justify-content: space-between;
+				cursor: pointer;
 
 				.contact-list__counter {
 					display: none;
