--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -3,19 +3,19 @@
 
 // Fonts
 @font-face {
-  font-family: 'Inter';
-  src: url('../../fonts/Inter-Regular.woff2') format('woff2'),
-				url('../../fonts/Inter-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
+	font-family: 'Inter';
+	src: url('../../fonts/Inter-Regular.woff2') format('woff2'),
+		url('../../fonts/Inter-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: 'Inter';
-  src: url('../../fonts/Inter-SemiBold.woff2') format('woff2'),
-				url('../../fonts/Inter-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
+	font-family: 'Inter';
+	src: url('../../fonts/Inter-SemiBold.woff2') format('woff2'),
+		url('../../fonts/Inter-SemiBold.woff') format('woff');
+	font-weight: 600;
+	font-style: normal;
 }
 
 //styles
@@ -24,138 +24,226 @@
 	display: flex;
 	flex-direction: column;
 	padding: 50px 0px 0px 0px;
+}
 
-	.header{
-		justify-items: center;
+.header {
+	justify-items: center;
 
-		.header__title{
-			font-size: 42px;
-			font-weight: 600;
-			margin: 0px 0px 10px 0px;
+	&__title {
+		font-size: 42px;
+		font-weight: 600;
+		margin: 0px 0px 10px 0px;
+	}
+
+	&__link {
+		font-size: 20px;
+		font-weight: 600;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
 		}
+	}
+}
 
-		.header__link{
-			font-size: 20px;
-			font-weight: 600;
-			text-decoration: none;
-			
-			&:hover{
-				text-decoration: underline;
+.main-content {
+	margin: 40px 0px 0px 0px;
+	flex: 1 1 auto;
+}
+
+.actions {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	margin: 0px 0px 50px 0px;
+	position: relative;
+
+	&__form {
+		display: flex;
+		gap: 20px;
+	}
+}
+
+.error {
+	position: absolute;
+	top: 34px;
+	background-color: rgba(253, 119, 153, 0.541);
+	border: 2px solid rgb(219, 23, 72);
+	border-radius: 5px;
+	height: 25px;
+	padding: 0px 15px;
+	display: flex;
+	align-items: center;
+	visibility: hidden;
+}
+
+.error-visible {
+	visibility: visible;
+	animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+
+	10% {
+		opacity: 1;
+	}
+
+	90% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+	}
+}
+
+.contact-list-wrapper {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+}
+
+.contact-list {
+	width: 300px;
+
+	&__counter {
+		display: none;
+	}
+
+	&__item {
+		font-size: 22px;
+		font-weight: 600;
+		line-height: 204.54%;
+		text-transform: uppercase;
+		min-height: auto;
+		background-color: rgb(197, 233, 196);
+		border-top: 1px solid rgb(71, 150, 69);
+		border-bottom: 1px solid rgb(71, 150, 69);
+		padding: 0px 35px 0px 15px;
+		display: flex;
+		justify-content: space-between;
+
+		&[data-active=true] {
+			background-color: rgb(136, 209, 135);
+
+			.contact-list__counter {
+				display: block;
 			}
 		}
 	}
+}
 
-	.main-content {
-		margin: 40px 0px 0px 0px;
+.item-contacts {
+	display: flex;
+	justify-content: space-between;
+	padding: 5px 10px;
+	background-color: rgba(197, 190, 228, 0.658);
+	border-bottom: 1px solid rgb(157, 113, 182);
+	border-top: 1px solid rgb(157, 113, 182);
+	font-size: 16px;
+
+	&__info {
+		flex-grow: 1;
+	}
+}
+
+.item-contacts__btn-wrapper {
+	display: flex;
+	gap: 10px;
+	margin: 0px 30px 0px 0px;
+}
+
+.search-modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	&__content {
+		background-color: white;
+		width: 700px;
+		height: 500px;
+		border-radius: 15px;
+		padding: 10px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	&__header {
+		display: flex;
+		width: 100%;
+	}
+
+	&__title {
+		font-size: 45px;
+		font-weight: 600;
+		flex-grow: 1;
+		text-align: center;
+		margin: 15px 0px 25px 0px;
+	}
+
+	&__body {
+		width: 580px;
 		flex: 1 1 auto;
+		display: flex;
+		flex-direction: column;
+	}
 
-		.actions-wrapper {
-			display: flex;
-			justify-content: center;
-			gap: 20px;
-			margin: 0px 0px 50px 0px;
-			position: relative;
+	&__input {
+		width: 580px;
+		height: 35px;
+		font-size: 20px;
+		margin: 0px 0px 17px 0px;
+		padding: 0px 10px 0px 10px;
+	}
 
-			.form {
-				display: flex;
-				gap: 20px;
-			}
-		}
+	&__contacts {
+		flex: 1 1 auto;
+		// justify-items: center;
+		// align-content: center;
+		max-height: 300px;
+		overflow-y: auto;
+	}
 
-		.error {
-			position: absolute;
-			top: 34px;
-			background-color: rgba(253, 119, 153, 0.541);
-			border: 2px solid rgb(219, 23, 72);
-			border-radius: 5px;
-			height: 25px;
-			padding: 0px 15px;
-			display: flex;
-			align-items: center;
-			visibility: hidden;
-		}
+	&__empty {
+		font-size: 30px;
+		color: rgb(128, 128, 128);
+	}
 
-		.errorVisible {
-			visibility: visible;
-			animation: fadeIn 5s;
-		}
+	&__empty[hidden] {
+		display: none;
+	}
 
-		@keyframes fadeIn {
-			0% {
-				opacity: 0;
-			}
+	&[data-isvisible=false] {
+		display: none;
+	}
 
-			10% {
-				opacity: 1;
-			}
+	&[data-isvisible=true] {
+		display: flex;
+	}
+}
 
-			90% {
-				opacity: 1;
-			}
+.btn-icon {
+	all: unset;
+	cursor: pointer;
+	font-size: 18px;
+	transition: color 0.3s;
 
-			100% {
-				opacity: 0;
-			}
-		}
+	&:hover {
+		color: red;
+	}
 
-		.contact-list-wrapper {
-			display: flex;
-			justify-content: center;
-			gap: 20px;
-			
-			.contact-list {
-				width: 300px;
-
-				.contact {
-					background-color: rgba(197, 190, 228, 0.658);
-					padding: 5px 10px;
-					display: flex;
-					align-items: center;
-					border-bottom: 1px solid rgb(157, 113, 182);
-					font-size: 16px;
-
-					.contact__info {
-						flex: 1 1 auto;
-					}
-
-					.contact__btn {
-						all: unset;
-						cursor: pointer;
-						font-size: 18px;
-						transition: color 0.3s;
-					}
-
-					.contact__btn:hover {
-						color: red;
-					}
-				}
-			}
-
-			.contact-list__item {
-				font-size: 22px;
-				font-weight: 600;
-				line-height: 204.54%;
-				text-transform: uppercase;
-				min-height: auto;
-				background-color: rgb(197, 233, 196);
-				border-top: 1px solid rgb(71, 150, 69);
-				border-bottom: 1px solid rgb(71, 150, 69);
-				padding: 0px 35px 0px 15px;
-				display: flex;
-				justify-content: space-between;
-
-				.contact-list__counter {
-					display: none;
-				}
-			}
-
-			.contact-list__item[data-active=true] {
-				background-color: rgb(136, 209, 135);
-
-				.contact-list__counter {
-					display: block;
-				}
-			}
-		}
+	&_big {
+		font-size: 23px;
+		align-self: start;
 	}
 }
