--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -165,7 +165,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgba(0, 0, 0, 0.7);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -235,12 +235,49 @@
 	}
 }
 
+.dialog {
+	border-radius: 7px;
+	background-color: rgb(245, 248, 248);
+	padding: 8px;
+	width: 320px;
+	border-width: 2px;
+
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		
+	}
+
+	&__title {
+		font-weight: 600;
+		font-size: 25px;
+		flex-grow: 1;
+		text-align: center;
+		margin: 10px 0px 10px 0px;
+	}
+
+	&__form {
+		display: flex;
+		flex-direction: column;
+		gap: 13px;
+		margin: 0px 15px 10px 15px;
+	}
+
+	&::backdrop {
+		background-color: rgba(0, 0, 0, 0.6);
+	}
+}
+
+.form-dialog__btn {
+	max-width: fit-content;
+	margin: 0 auto;
+}
+
 .btn-icon {
 	all: unset;
 	cursor: pointer;
 	font-size: 18px;
 	transition: color 0.3s;
-	height: fit-content;
 	align-self: center;
 
 	&:hover {
@@ -252,7 +289,7 @@
 		align-self: start;
 	}
 
-	&_with-extra-padding {
-		padding: 0px 10px 0px 0px;
+	&_with-extra-margin {
+		margin: 0px 10px 0px 0px;
 	}
 }
