--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -24,6 +24,10 @@
 	display: flex;
 	flex-direction: column;
 	padding: 50px 0px 0px 0px;
+	background-image: url('./../../img/background.webp');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
 .header {
@@ -62,6 +66,12 @@
 		display: flex;
 		gap: 20px;
 	}
+}
+
+.form-actions__input,
+.form-dialog__input {
+	font-size: 15px;
+	padding: 0px 5px;
 }
 
 .error {
@@ -107,7 +117,7 @@
 }
 
 .contact-list {
-	width: 300px;
+	width: 325px;
 
 	&__counter {
 		display: none;
@@ -140,14 +150,15 @@
 	&__item {
 		display: flex;
 		justify-content: space-between;
+		gap: 10px;
 	}
 }
 
 .item-contacts {
 	padding: 5px 10px;
-	background-color: rgba(197, 190, 228, 0.658);
-	border-bottom: 1px solid rgb(157, 113, 182);
-	border-top: 1px solid rgb(157, 113, 182);
+	background-color: rgb(243, 250, 139);
+	border-bottom: 1px solid rgb(255, 208, 1);
+	border-top: 1px solid rgb(238, 213, 101);
 	font-size: 16px;
 
 	&__info {
@@ -159,27 +170,27 @@
 	}
 }
 
+
+
 .search-modal {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: white;
+	width: 700px;
+	height: 500px;
+	border-radius: 15px;
+	padding: 10px;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 
-	&__content {
-		background-color: white;
-		width: 700px;
-		height: 500px;
-		border-radius: 15px;
-		padding: 10px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
+	// width: 90%;
+	// max-width: 700px;
+	// transform: translateY(-20px);
+	// opacity: 1;
+	// transition: transform 0.3s ease;
+	// transition:
+	// opacity 0.5s ease;
+	// pointer-events: none;
+	// transform 0.3s ease;
 
 	&__header {
 		display: flex;
@@ -216,6 +227,26 @@
 		max-height: 300px;
 		overflow-y: auto;
 	}
+}
+
+.search-modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	// display: none;
+	visibility: hidden;
+	z-index: 1000;
+	opacity: 0;
+	transition: opacity 0.5s ease, visibility 0.5s ease;
+	pointer-events: none;
+
+
 
 	/* &__empty {
 		font-size: 30px;
@@ -226,26 +257,72 @@
 		display: none;
 	} */
 
-	&[data-isvisible=false] {
-		display: none;
-	}
+	// &[data-isvisible=false] {
+	// 	display: none;
+	// }
 
-	&[data-isvisible=true] {
-		display: flex;
-	}
+	// &[data-isvisible=true] {
+	// 	display: flex;
+	// }
 }
 
-.dialog {
+.search-modal-overlay.active {
+	visibility: visible;
+	opacity: 1;
+	pointer-events: auto;
+	// display: flex;
+}
+
+// .search-modal-overlay.active .search-modal {
+// 	opacity: 1;
+// 	pointer-events: auto;
+// 	// transform: translateY(0);
+// }
+
+.edit-modal {
 	border-radius: 7px;
 	background-color: rgb(245, 248, 248);
 	padding: 8px;
 	width: 320px;
 	border-width: 2px;
 
+	// display: none;
+	// position: fixed;
+	// top: 50%;
+	// left: 50%;
+	// transform: translate(-50%, -50%) scale(0.8);
+	// visibility: hidden;
+	// opacity: 0;
+
+	// transition: opacity 0.5s ease, visibility 0.5s ease;
+	// transform 0.3s ease;
+	// z-index: 1001;
+	// width: 90%;
+	// max-width: 320px;
+	// display: block;
+	// position: fixed;
+	// top: 50%;
+	// left: 50%;
+	// transform: translate(-50%, -50%) scale(0.95);
+	// opacity: 0;
+	// visibility: hidden;
+	// transition:
+	// opacity 0.5s ease;
+	// visibility 0.5s ease,
+	// transform 0.5s ease;
+	// z-index: 1001;
+	// background: white;
+	// padding: 20px;
+	// border-radius: 8px;
+	// width: 90%;
+	// max-width: 500px;
+	// border: none;
+	// pointer-events: none;
+
 	&__header {
 		display: flex;
 		justify-content: space-between;
-		
+
 	}
 
 	&__title {
@@ -263,12 +340,27 @@
 		margin: 0px 15px 10px 15px;
 	}
 
-	&::backdrop {
-		background-color: rgba(0, 0, 0, 0.6);
-	}
+	// &::backdrop {
+	// 	background-color: rgba(0, 0, 0, 0.6);
+
+	// 	// opacity: 0;
+	// 	// transition: opacity 0.3s ease;
+	// }
 }
 
-.form-dialog__btn {
+// .dialog[open] {
+// 	display: block;
+// 	// opacity: 1;
+// 	// visibility: visible;
+// 	// transform: translate(-50%, -50%) scale(1);
+// }
+
+// .dialog[open]::backdrop {
+// 	opacity: 1;
+// 	visibility: visible;
+// }
+
+.form-edit-modal__btn {
 	max-width: fit-content;
 	margin: 0 auto;
 }
@@ -289,7 +381,81 @@
 		align-self: start;
 	}
 
-	&_with-extra-margin {
-		margin: 0px 10px 0px 0px;
+	// &_with-extra-margin {
+	// 	margin: 0px 10px 0px 0px;
+	// }
+}
+
+// .fa-solid{
+// 	line-height: 1;
+// }
+
+.btn {
+	font-weight: 600;
+	font-size: 16px;
+	padding: 3px 15px;
+	border-radius: 10px;
+	background-color: rgb(255, 255, 255);
+	border: 2px solid rgb(118, 59, 196);
+	transition: all 0.4s;
+
+	&:hover {
+		color: rgb(255, 255, 255);
+		background-color: rgb(135, 93, 190);
+		border-color: rgb(255, 255, 255);
 	}
 }
+
+.input {
+	border-radius: 6px;
+	border: 2px solid rgb(190, 190, 190);
+	transition: all 0.4s;
+
+	&:hover,
+	&:focus {
+		border-color: rgb(118, 59, 196);
+	}
+}
+
+.edit-modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7);
+	z-index: 1000;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.5s ease, visibility 0.5s ease;
+	pointer-events: none;
+
+	// position: fixed;
+	// 	top: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	// 	// display: none;
+	// 	visibility: hidden;
+	// 	z-index: 1000;
+	// 	opacity: 0;
+	// 	transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.edit-modal-overlay.active {
+	opacity: 1;
+	visibility: visible;
+	pointer-events: auto;
+	// display: block;
+	// transform: translate(-50%, -50%) scale(1);
+}
+
+// .edit-modal-overlay.active .edit-modal {
+// 	opacity: 1;
+// 	visibility: visible;
+// 	pointer-events: auto;
+// }
