--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,5 +1,8 @@
 // Reset styles
 @use '_reset';
+@use 'variables' as *;
+@use 'sass:map';
+// @import 'variables';
 
 // Fonts
 @font-face {
@@ -69,7 +72,7 @@
 }
 
 .form-actions__input,
-.form-dialog__input {
+.form-edit-modal__input {
 	font-size: 15px;
 	padding: 0px 5px;
 }
@@ -77,8 +80,8 @@
 .error {
 	position: absolute;
 	top: 34px;
-	background-color: rgba(253, 119, 153, 0.541);
-	border: 2px solid rgb(219, 23, 72);
+	background-color: map.get($colors, red, light);
+	border: 2px solid map.get($colors, red, medium);
 	border-radius: 5px;
 	height: 25px;
 	padding: 0px 15px;
@@ -129,15 +132,15 @@
 		line-height: 204.54%;
 		text-transform: uppercase;
 		min-height: auto;
-		background-color: rgb(197, 233, 196);
-		border-top: 1px solid rgb(71, 150, 69);
-		border-bottom: 1px solid rgb(71, 150, 69);
+		background-color: map.get($colors, green, light);
+		border-top: 1px solid map.get($colors, green, dark);
+		border-bottom: 1px solid map.get($colors, green, dark);
 		padding: 0px 35px 0px 15px;
 		display: flex;
 		justify-content: space-between;
 
 		&[data-active=true] {
-			background-color: rgb(136, 209, 135);
+			background-color: map.get($colors, green, medium);
 
 			.contact-list__counter {
 				display: block;
@@ -156,9 +159,9 @@
 
 .item-contacts {
 	padding: 5px 10px;
-	background-color: rgb(243, 250, 139);
-	border-bottom: 1px solid rgb(255, 208, 1);
-	border-top: 1px solid rgb(238, 213, 101);
+	background-color: map.get($colors, yellow, light);
+	border-bottom: 1px solid map.get($colors, yellow, medium);
+	border-top: 1px solid map.get($colors, yellow, medium);
 	font-size: 16px;
 
 	&__info {
@@ -173,7 +176,7 @@
 
 
 .search-modal {
-	background-color: white;
+	background-color: map.get($colors, white, base);
 	width: 700px;
 	height: 500px;
 	border-radius: 15px;
@@ -181,16 +184,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
-	// width: 90%;
-	// max-width: 700px;
-	// transform: translateY(-20px);
-	// opacity: 1;
-	// transition: transform 0.3s ease;
-	// transition:
-	// opacity 0.5s ease;
-	// pointer-events: none;
-	// transform 0.3s ease;
 
 	&__header {
 		display: flex;
@@ -235,89 +228,29 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: map.get($colors, black, dimmed);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	// display: none;
 	visibility: hidden;
 	z-index: 1000;
 	opacity: 0;
 	transition: opacity 0.5s ease, visibility 0.5s ease;
 	pointer-events: none;
-
-
-
-	/* &__empty {
-		font-size: 30px;
-		color: rgb(128, 128, 128);
-	} */
-
-	/* &__empty[hidden] {
-		display: none;
-	} */
-
-	// &[data-isvisible=false] {
-	// 	display: none;
-	// }
-
-	// &[data-isvisible=true] {
-	// 	display: flex;
-	// }
 }
 
 .search-modal-overlay.active {
 	visibility: visible;
 	opacity: 1;
 	pointer-events: auto;
-	// display: flex;
 }
-
-// .search-modal-overlay.active .search-modal {
-// 	opacity: 1;
-// 	pointer-events: auto;
-// 	// transform: translateY(0);
-// }
 
 .edit-modal {
 	border-radius: 7px;
-	background-color: rgb(245, 248, 248);
+	background-color: map.get($colors, white, dark);
 	padding: 8px;
 	width: 320px;
-	border-width: 2px;
-
-	// display: none;
-	// position: fixed;
-	// top: 50%;
-	// left: 50%;
-	// transform: translate(-50%, -50%) scale(0.8);
-	// visibility: hidden;
-	// opacity: 0;
-
-	// transition: opacity 0.5s ease, visibility 0.5s ease;
-	// transform 0.3s ease;
-	// z-index: 1001;
-	// width: 90%;
-	// max-width: 320px;
-	// display: block;
-	// position: fixed;
-	// top: 50%;
-	// left: 50%;
-	// transform: translate(-50%, -50%) scale(0.95);
-	// opacity: 0;
-	// visibility: hidden;
-	// transition:
-	// opacity 0.5s ease;
-	// visibility 0.5s ease,
-	// transform 0.5s ease;
-	// z-index: 1001;
-	// background: white;
-	// padding: 20px;
-	// border-radius: 8px;
-	// width: 90%;
-	// max-width: 500px;
-	// border: none;
-	// pointer-events: none;
+	border: 2px solid map.get($colors, black, base);
 
 	&__header {
 		display: flex;
@@ -339,29 +272,9 @@
 		gap: 13px;
 		margin: 0px 15px 10px 15px;
 	}
-
-	// &::backdrop {
-	// 	background-color: rgba(0, 0, 0, 0.6);
-
-	// 	// opacity: 0;
-	// 	// transition: opacity 0.3s ease;
-	// }
 }
 
-// .dialog[open] {
-// 	display: block;
-// 	// opacity: 1;
-// 	// visibility: visible;
-// 	// transform: translate(-50%, -50%) scale(1);
-// }
-
-// .dialog[open]::backdrop {
-// 	opacity: 1;
-// 	visibility: visible;
-// }
-
 .form-edit-modal__btn {
-	max-width: fit-content;
 	margin: 0 auto;
 }
 
@@ -373,47 +286,39 @@
 	align-self: center;
 
 	&:hover {
-		color: red;
+		color: map.get($colors, red, base);
 	}
 
 	&_big {
 		font-size: 23px;
 		align-self: start;
 	}
-
-	// &_with-extra-margin {
-	// 	margin: 0px 10px 0px 0px;
-	// }
 }
-
-// .fa-solid{
-// 	line-height: 1;
-// }
 
 .btn {
 	font-weight: 600;
 	font-size: 16px;
 	padding: 3px 15px;
 	border-radius: 10px;
-	background-color: rgb(255, 255, 255);
-	border: 2px solid rgb(118, 59, 196);
+	background-color: map.get($colors, white, base);
+	border: 2px solid map.get($colors, purple, dark);
 	transition: all 0.4s;
 
 	&:hover {
-		color: rgb(255, 255, 255);
-		background-color: rgb(135, 93, 190);
-		border-color: rgb(255, 255, 255);
+		color: map.get($colors, white, base);
+		background-color: map.get($colors, purple, medium);
+		border-color: map.get($colors, white, base);
 	}
 }
 
 .input {
 	border-radius: 6px;
-	border: 2px solid rgb(190, 190, 190);
+	border: 2px solid map.get($colors, gray);
 	transition: all 0.4s;
 
 	&:hover,
 	&:focus {
-		border-color: rgb(118, 59, 196);
+		border-color: map.get($colors, purple, dark);
 	}
 }
 
@@ -423,39 +328,19 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.7);
+	background: map.get($colors, black, dimmed);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	z-index: 1000;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 0.5s ease, visibility 0.5s ease;
 	pointer-events: none;
-
-	// position: fixed;
-	// 	top: 0;
-	// 	left: 0;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	background-color: rgba(0, 0, 0, 0.7);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	// 	// display: none;
-	// 	visibility: hidden;
-	// 	z-index: 1000;
-	// 	opacity: 0;
-	// 	transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
 .edit-modal-overlay.active {
 	opacity: 1;
 	visibility: visible;
 	pointer-events: auto;
-	// display: block;
-	// transform: translate(-50%, -50%) scale(1);
 }
-
-// .edit-modal-overlay.active .edit-modal {
-// 	opacity: 1;
-// 	visibility: visible;
-// 	pointer-events: auto;
-// }
