Added hiding/showing empty-state when there are/are no contacts

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -215,10 +215,13 @@
 
 	&__contacts {
 		flex: 1 1 auto;
-		// justify-items: center;
-		// align-content: center;
 		max-height: 300px;
 		overflow-y: auto;
+	}
+
+	&__empty {
+		font-size: 30px;
+		color: rgb(128, 128, 128);
 	}
 }
 
