--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -106,6 +106,20 @@
 		}
 }
 
+.global__error {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 1002;
+	transform: translate(-50%, -50%);
+	opacity: 0;
+	transition: opacity 0.5s ease;
+
+	&.active {
+		opacity: 1;
+	}
+}
+
 .error-style {
 	background-color: map.get($colors, red, light);
 	border: 2px solid map.get($colors, red, medium);
@@ -114,6 +128,8 @@
 	padding: 0px 15px;
 	display: flex;
 	align-items: center;
+	width: max-content;
+	justify-self: center;
 }
 
 .contact-list-wrapper {
@@ -368,4 +384,8 @@
 	opacity: 1;
 	visibility: visible;
 	pointer-events: auto;
+}
+
+.hidden {
+	display: none;
 }
